Fix bug causing feed to be too narrow

--- a/client/src/components/Home/Center/center.scss
+++ b/client/src/components/Home/Center/center.scss
@@ -3,9 +3,6 @@
 .center {
   flex: 5;
   padding: 1%;
-  .feed {
-    width: 500px;
-  }
 }
 
 .container {
